[package]
name = "lang_packer"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
chrono = "0.4.38"
darling = "0.20.10"
itertools = "0.13.0"
pest = "2.7.14"
proc-macro2 = "1.0.88"
quote = "1.0.37"
rand = "0.8.5"
syn = "2.0.77"
token_packer = { path = "/LocalProjects/token_packer" }
